# cmbml

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md
include/cmbml/: cmbml.hpp  common.hpp  data.hpp  history.hpp  reader.hpp  reader_impl.hpp  reader_state_machine.hpp  types.hpp  writer.hpp  writer_state_machine.hpp
include/cmbml/behavior/: reader_state_machine.hpp  reader_state_machine_actions.hpp  reader_state_machine_events.hpp  writer_state_machine.hpp  writer_state_machine_actions.hpp  writer_state_machine_events.hpp
include/cmbml/cdr/: common.hpp  convert_representations.hpp  deserialize_anything.hpp  place_integral_type.hpp  serialize_anything.hpp
include/cmbml/dds/: condition.hpp  constants.hpp  domain.hpp  endpoint.hpp  qos.hpp  reader.hpp  sample_info.hpp  waitset.hpp  writer.hpp
include/cmbml/discovery/: common.hpp
include/cmbml/discovery/endpoint/: messages.hpp  sedp.hpp
include/cmbml/discovery/participant/: sedp.hpp  spdp.hpp  spdp_disco_data.hpp
include/cmbml/message/: data.hpp  header.hpp  message.hpp  message_receiver.hpp  parameter.hpp  submessage.hpp
include/cmbml/psm/udp/: constants.hpp  context.hpp  locators.hpp  ports.hpp  transport.hpp
include/cmbml/serialization/: common.hpp  deserialize_anything.hpp  deserialize_cdr.hpp  pl_encapsulation.hpp  pl_serialization.hpp  place_integral_type.hpp  serialization.hpp  serialize_anything.hpp  serialize_cdr.hpp  serialize_pl.hpp
include/cmbml/structure/: endpoint.hpp  history.hpp  locator.hpp  participant.hpp  reader.hpp  reader_proxy.hpp  writer.hpp  writer_proxy.hpp
include/cmbml/utility/: console_print.hpp  executor.hpp  metafunctions.hpp  option_map.hpp  sync_executor.hpp
src/: common.cpp  history.cpp  reader.cpp  writer.cpp
src/dds/: condition.cpp
src/psm/udp/: context.cpp  transport.cpp
test/: cmbml.cpp  nominal_usage.cpp  nominal_usage.hpp  serialization.cpp
